<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:textColor="#00838F"
        android:title="@string/preference_main_category"
        android:key="preference_main">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_lunar"
            android:title="@string/preference_main_lunar" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_carrier_name"
            android:title="@string/preference_carrier"/>
        <ListPreference
            android:defaultValue="reimu"
            android:entries="@array/clock_locate_entries"
            android:entryValues="@array/clock_locate_values"
            android:key="list_preference_clock_locate"
            android:title="@string/clock_locate_title" />

        <ListPreference
            android:defaultValue="56"
            android:entries="@array/clock_size_entries"
            android:entryValues="@array/clock_size_entries"
            android:key="list_preference_clock_size"
            android:title="@string/preference_main_clock_size" />
        <ListPreference
            android:defaultValue="grid"
            android:entries="@array/app_list_entries"
            android:entryValues="@array/app_list_values"
            android:key="app_list_func"
            android:title="@string/preference_app_list"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_func_category"
        android:key="preference_func">
        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_main_xiaoai_ai"
            android:summary="@string/preference_main_enable_ai_category"
            android:title="@string/preference_main_enable_ai" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_dial_pad"
            android:summary="@string/preference_dial_summary"
            android:title="@string/preference_enable_dial"/>
        <ListPreference
            android:defaultValue="volume"
            android:title="@string/preference_pound_func_title"
            android:entries="@array/pound_func_entries"
            android:entryValues="@array/pound_func_values"
            android:key="preference_pound_func"/>
        <Preference
            android:key="preference_main_default_launcher"
            android:title="@string/preference_main_default_launcher">
            <intent android:action="android.settings.MANAGE_DEFAULT_APPS_SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>