<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/sort_type_title"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_app_sort_pinyin"
                android:title="@string/sort_type_pinyin"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menu_app_sort_default"
                android:title="@string/sort_type_default"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_volume_changer"
        android:title="@string/menu_volume_dash"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_launcher_option"
        android:title="@string/menu_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_about_phone"
        android:title="@string/menu_about_phone"
        app:showAsAction="never"/>
</menu>