<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <org.exthmui.microlauncher.duoqin.widgets.AppRecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/hide_app_list"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transpart">
        <TextView
            android:id="@+id/menu_exclude_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:focusable="false"
            android:text="@string/app_menu_string"
            android:textColor="#9E9E9E"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondary_text"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusable="false"
            android:text="@string/ok"
            android:textColor="#9E9E9E"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/menu_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:focusable="false"
            android:text="@string/back"
            android:textColor="#9E9E9E"
            android:textSize="24sp" />
    </RelativeLayout>
</LinearLayout>