<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vol_media">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vol_media_title"
        android:text="@string/vol_media_title"
        android:layout_marginStart="8dp"/>

        <SeekBar
            android:id="@+id/vol_media_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vol_media_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vol_media_seek"
        android:textSize="16sp"
        android:text="@string/default_volume"
        android:id="@+id/vol_media_text"
        android:layout_marginStart="8dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vol_ring"
        android:layout_below="@id/vol_media">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vol_ring_title"
            android:text="@string/vol_ring_title"
            android:layout_marginStart="8dp"/>
        <SeekBar
            android:id="@+id/vol_ring_seek"
            android:layout_below="@id/vol_ring_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vol_ring_seek"
            android:textSize="16sp"
            android:text="@string/default_volume"
            android:id="@+id/vol_ring_text"
            android:layout_marginStart="8dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vol_alarm"
        android:layout_below="@id/vol_ring">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vol_alarm_title"
            android:text="@string/vol_alarm_title"
            android:layout_marginStart="8dp"/>
        <SeekBar
            android:id="@+id/vol_alarm_seek"
            android:layout_below="@id/vol_alarm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vol_alarm_seek"
            android:textSize="16sp"
            android:text="@string/default_volume"
            android:id="@+id/vol_alarm_text"
            android:layout_marginStart="8dp"/>
    </RelativeLayout>
</RelativeLayout>